feat(root): rebuild with new static.config.js

--- a/views/template.html
+++ b/views/template.html
@@ -67,8 +67,8 @@
   </script>
 
   {% if ENV -%}
-  <script defer src="/topedia-edu-github-io/public/js/common.min.js" type="text/javascript"></script>
-  <script defer src="/topedia-edu-github-io/public/js/{{ js }}.min.js" type="text/javascript"></script>
+  <script defer src="/public/js/common.min.js" type="text/javascript"></script>
+  <script defer src="/public/js/{{ js }}.min.js" type="text/javascript"></script>
   {% else -%}
   <script defer src="http://localhost:8080/webpack-dev-server.js" type="text/javascript"></script>
   <script defer src="http://localhost:8080/assets/common.js" type="text/javascript"></script>
